[gd_scene load_steps=22 format=3 uid="uid://dw0qqqthyfbgy"]

[ext_resource type="Script" path="res://scripts/crocantel.gd" id="1_jfm5d"]
[ext_resource type="AudioStream" uid="uid://c8f18qogjnm0k" path="res://sound_effects/Hit_hurt 79.wav" id="3_7v51u"]
[ext_resource type="Texture2D" uid="uid://ugehrlvl0uh8" path="res://images/crocantel1-Sheet.png" id="4_bnqwm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2cr8p"]
radius = 30.7737

[sub_resource type="Animation" id="Animation_h4wie"]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ssdlj"]
_data = {
"take_damage": SubResource("Animation_h4wie")
}

[sub_resource type="Animation" id="Animation_06ope"]
resource_name = "death"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.54902, 0.568627, 0.54902, 1), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.5), Vector2(1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 16), Vector2(0, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4lxt7"]
_data = {
"death": SubResource("Animation_06ope")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_slom7"]
atlas = ExtResource("4_bnqwm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijmw2"]
atlas = ExtResource("4_bnqwm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhxsa"]
atlas = ExtResource("4_bnqwm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_phlju"]
atlas = ExtResource("4_bnqwm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uyxx"]
atlas = ExtResource("4_bnqwm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjlle"]
atlas = ExtResource("4_bnqwm")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiefv"]
atlas = ExtResource("4_bnqwm")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sbgb"]
atlas = ExtResource("4_bnqwm")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60bv4"]
atlas = ExtResource("4_bnqwm")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wr4a"]
atlas = ExtResource("4_bnqwm")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chnht"]
atlas = ExtResource("4_bnqwm")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs38w"]
atlas = ExtResource("4_bnqwm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o5mmf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_slom7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijmw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhxsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phlju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uyxx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjlle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiefv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sbgb")
}],
"loop": false,
"name": &"laser",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60bv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wr4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chnht")
}],
"loop": false,
"name": &"spiral",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_cs38w")
}],
"loop": false,
"name": &"wave",
"speed": 1.0
}]

[node name="Crocantel" type="CharacterBody2D" groups=["damageable", "despawnable", "ranged"]]
z_index = 1
scale = Vector2(1.5, 1.5)
collision_layer = 2
collision_mask = 3
platform_on_leave = 2
platform_floor_layers = 4294901760
script = ExtResource("1_jfm5d")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.333333, 2)
scale = Vector2(0.965, 0.965)
shape = SubResource("CircleShape2D_2cr8p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ssdlj")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Enemy_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7v51u")
volume_db = -10.0

[node name="DeathPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4lxt7")
}

[node name="StateTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o5mmf")
animation = &"spiral"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, -9.33333)

[node name="LeftCannon" type="Node2D" parent="."]
position = Vector2(-16.6667, -12)

[node name="RightCannon" type="Node2D" parent="."]
position = Vector2(16.6667, -12)

[node name="CannonTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
